Add blue background and basic html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world!
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+
+<h1>Welcome to the secret santa game!</h1>
+<p>Hi here we plan to have a sign in page and then once they sign in they will get assigned to another friend to be a secret santa for them!</p>
+
+</body>
+</html>
+
